Fix: move vertical-align to the common definitions to have any effect on table cells

--- a/responsive_1/style.new.css
+++ b/responsive_1/style.new.css
@@ -961,6 +961,9 @@ table {
 	border-collapse: collapse;
 	width: 100%;
 }
+th, td {
+	vertical-align: top;
+}
 
 .settings {
 	margin: 0 0 0.25em 0;
@@ -1689,8 +1692,6 @@ div.warning {
 	tr:last-child {
 		margin-bottom: 0;
 	}
-	th, td {
-		vertical-align: top;
 		padding: 0.125em 0.25em;
 		padding: 0.125rem 0.25rem;
 	}
